--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
+    "@tanstack/react-query": "^4.36.1",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "firebase": "^9.22.0",
